src/test/ui/macros/missing-comma.stderr
error: expected token: `,`
  --> $DIR/missing-comma.rs:10:19
   |
LL |     println!("{}" a);
   |                   ^

error: no rules expected the token `b`
  --> $DIR/missing-comma.rs:12:12
   |
LL |     foo!(a b);
   |           -^
   |           |
   |           help: missing comma here

error: no rules expected the token `e`
  --> $DIR/missing-comma.rs:14:21
   |
LL |     foo!(a, b, c, d e);
   |                    -^
   |                    |
   |                    help: missing comma here

error: no rules expected the token `d`
  --> $DIR/missing-comma.rs:16:18
   |
LL |     foo!(a, b, c d, e);
   |                 -^
   |                 |
   |                 help: missing comma here

error: no rules expected the token `d`
  --> $DIR/missing-comma.rs:18:18
   |
LL |     foo!(a, b, c d e);
   |                  ^

error: aborting due to 5 previous errors

